--- a/css/index.css
+++ b/css/index.css
@@ -82,14 +82,13 @@
     color: var(--secondary-color);
     font-size: 1.1em;
     border: none;
-    margin: 10px;
 }
 
 #message-to-player {
     color: var(--secondary-color);
     font-size: 1.1em;
     border: none;
-    margin: 10px;
+    margin: -10px;
 }
 
 .panel {
@@ -107,6 +106,7 @@
         width: 40px;
         height: 40px;
     }
+    #restart, .aiBtn, #message-to-player {font-size: 1em}
 }
 
 @media (max-width: 388px) {
@@ -117,6 +117,7 @@
     .portfolio-button {font-size: 1em}
     .portfolio-button{padding: 15px 25px;}
     .home-page-message p {font-size: 1em}
+    #restart, .aiBtn, #message-to-player {font-size: 0.85em}
 }
 
 @media (max-width: 304px) {
@@ -124,4 +125,5 @@
         width: 20px;
         height: 20px;
     }
+    #restart, .aiBtn, #message-to-player {font-size: 0.65em}
 }
